--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "piece",
-    "slug": "l0ne_piece_app",
+    "name": "Payman",
+    "slug": "l0ne_payman_app",
     "privacy": "public",
     "sdkVersion": "32.0.0",
     "platforms": [
@@ -26,7 +26,7 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.l0ne.piece"
+      "package": "com.l0ne.payman"
     },
     "description": ""
   }
